--- a/src/app/_popupKomponente/ansprechpartner/ansprechpartner.component.sass
+++ b/src/app/_popupKomponente/ansprechpartner/ansprechpartner.component.sass
@@ -68,3 +68,11 @@
 
 .btnBearbeiten
     height: 0px
+
+.notizen textarea
+    background-color: white
+    border: 1px solid $borderColor
+    border-radius: 8px
+
+.btnMiddle 
+    margin-top: 10px
