--- a/src/app/_popupKomponente/projekt-kundendaten/projekt-kundendaten.component.html
+++ b/src/app/_popupKomponente/projekt-kundendaten/projekt-kundendaten.component.html
@@ -39,7 +39,7 @@
                     </thead>
                     <tbody>
                         <tr *ngFor="let partner of ansprechpartner">
-                            <td>{{partner.anrede}} {{partner.vorname}} {{partner.nachname}}</td>
+                            <td>{{partner.anrede}} {{partner.name}}</td>
                             <td>{{partner.funktion}}</td>
                         </tr>
                     </tbody>
