--- a/src/app/_hauptKomponente/c-dashboard/c-dashboard.component.sass
+++ b/src/app/_hauptKomponente/c-dashboard/c-dashboard.component.sass
@@ -41,6 +41,11 @@
 .fmTable tbody
     max-height: calc( $zweiTeiligeHoeheUnten - 50px )
 
+.windowTable tbody tr
+    &:hover
+        background-color: white
+        cursor: default
+
 @media only screen and (max-height: 800px)
     .fmTable tbody
         max-height: calc( $zweiTeiligeHoeheUnten - 50px + 80px )
