--- a/src/sass/_popup.sass
+++ b/src/sass/_popup.sass
@@ -224,6 +224,11 @@ input
     padding-left: 5px
     margin-left: 10px
 
+
+/* One Third Form */
+.userData
+    display: flex
+
 /* Meta und Statistiken */
 .metaContent
     margin-left: 40px
