--- a/src/app/_popupKomponente/generate-projekt/generate-projekt.component.sass
+++ b/src/app/_popupKomponente/generate-projekt/generate-projekt.component.sass
@@ -1,3 +1,7 @@
 @import './src/sass/var'
 @import './src/sass/popup'
 
+.notizenHoch textarea
+    background-color: white
+    border: 1px solid $borderColor
+    border-radius: 8px
