--- a/src/app/_popupKomponente/konditionen/konditionen.component.html
+++ b/src/app/_popupKomponente/konditionen/konditionen.component.html
@@ -1,35 +1,40 @@
 <div class="popupWindow">
-    <div class="popupHeader">
-        <div class="headerBezeichnung">
-            <p>Konditionen</p>
-        </div>
-        <div class="closeTab">
-            <span (click)="closeModal()" class="close"><img [src]="close" alt=""></span>
-        </div>
-    </div>
-    <div class="popupContent">
-        <div class="split firstSplit">
-            <p>Zahlungsart:</p>
-            <div class="dropDown">
-                <select name="zahlungsarten" id="zahlungsarten">
-                    <option *ngFor="let zaGruppe of zaGroup">{{zaGruppe.zaGruppe}}</option>
-                </select>
+
+    <form [formGroup]="konditionenForm" (submit)="save()">
+        <div class="popupHeader">
+            <div class="headerBezeichnung">
+                <p>Konditionen</p>
             </div>
-            <p>Zahlungskonditionen:</p>
-            <div class="dropDown">
-                <select name="zahlungsbedingungen" id="zahlungsbedingungen">
-                    <option *ngFor="let zbGruppe of zbGroup">{{zbGruppe.zbGruppe}}</option>
-                </select>
+            <div class="closeTab">
+                <span (click)="closeModal()" class="close"><img [src]="close" alt=""></span>
             </div>
         </div>
-        <div class="split secondSplit">
+        <div class="popupContent">
+            <div class="split firstSplit">
+                <p>Zahlungsart:</p>
+                <div class="dropDown">
+                    <select name="zahlungsarten" id="zahlungsarten" formControlName="zahlungsarten">
+                        <option *ngFor="let z of zahlungsart" value="{{z.id}}">{{z.bezeichnung}}</option>
+                    </select>
+                </div>
+                <p>Zahlungskonditionen:</p>
+                <div class="dropDown">
+                    <select name="zahlungsbedingungen" id="zahlungsbedingungen" formControlName="zahlungsbedingungen">
+                        <option *ngFor="let z of zahlungskondition" value="{{z.id}}">{{z.bezeichnung}}</option>
+                    </select>
+                </div>
+            </div>
+            <div class="split secondSplit">
+            </div>
+            <div class="split thirdSplit">
+            </div>
         </div>
-        <div class="split thirdSplit">
+        <div class="popupFooter">
+            <div class="btnBearbeiten btnSpeichern">
+                <input value="Änderungen speichern" type="submit">
+            </div>
         </div>
-    </div>
-    <div class="popupFooter">
-        <div class="btnBearbeiten btnSpeichern">
-            <p (click)="save()">Änderungen speichern</p>
-        </div>
-    </div>
+    </form>
+
+
 </div>
