--- a/src/app/_hauptKomponente/k-unternehmen/k-unternehmen.component.html
+++ b/src/app/_hauptKomponente/k-unternehmen/k-unternehmen.component.html
@@ -45,6 +45,9 @@
                 <div class="btnUnternehmen">
                     <p (click)="openStatistiken()">Statistiken</p>
                 </div>
+                <div class="btnUnternehmen">
+                    <p (click)="openDokumentenverwaltung()">Dokumentenverwaltung</p>
+                </div>
             </div>
             <div class="split thirdSplit">
                 <div class="logoUnternehmen">
